# contacts-manager

./: .gitignore  README.md  contacts.db  credentials.json  duplicate_cache_status.json  imap_credentials.pickle  pyproject.toml  requirements.txt  token.pickle  yahoo_credentials.json  yahoo_oauth_credentials.json  yahoo_token.pickle
src/: __init__.py  main.py  run_all.py
src/core/: __init__.py  app_state.py  background_tasks.py  command_manager.py  commands.py  contact_manager.py  matcher.py
src/db/: __init__.py  create_tables.py  database.py  schema.sql
src/db/migrations/: add_deleted_column.py
src/gui/: contact_details_dialog.py  contact_dialog.py  duplicate_finder.py  duplicate_finder_dialog.py  login_dialog.py  main_window.py  merge_dialog.py  source_dialog.py
src/models/: __init__.py  contact_model.py  duplicate_cache.py  source_config.py
src/sources/: __init__.py  carddav_source.py  csv_source.py  gmail_source.py  imap_source.py  yahoo_source.py
src/web/: app.py  run.py
src/web/static/css/: style.css
src/web/static/js/: main.js  sources.js
src/web/templates/: index.html  oauth_success.html  sources.html
src/workers/: duplicate_worker.py
