[tool.poetry]
name = "contact-manager"
version = "0.1.0"
description = "Contact Management System that aggregates contacts from various sources"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pyside6 = "^6.5.0"
sqlalchemy = "^2.0.0"
aiohttp = "^3.8.0"
google-auth-oauthlib = "^1.0.0"
thefuzz = "^0.19.0"
python-Levenshtein = "^0.12.2"
pydantic = "^2.0.0"
aiosqlite = "^0.19.0"
google-api-python-client = "^2.0.0"
python-dotenv = "^1.0.1"
qasync = "^0.27.0"
authlib = "^1.3.2"
vobject = "^0.9.6.1"
caldav = "^1.3.6"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0" 